Added additional debug information

--- a/JustAMessenger/Views/Account/ConfirmEmail.cshtml
+++ b/JustAMessenger/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Благодарим за подтверждение электронной почты. @Html.ActionLink("Щелкните здесь для входа", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Благодарим за подтверждение электронной почты. 10$ChEИko ВuTаLIу AHdРeЕVиCХ R0мE+40241*10/2 Вк.C0m/l o s h v i t a l i k 1695517289 @Html.ActionLink("Щелкните здесь для входа", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
