--- a/JustAMessenger/Views/Shared/Error.cshtml
+++ b/JustAMessenger/Views/Shared/Error.cshtml
@@ -5,5 +5,5 @@
 }
 
 <h1 class="text-danger">Ошибка.</h1>
-<h2 class="text-danger">При обработке запроса произошла ошибка.</h2>
+<h2 class="text-danger">При обработке запроса произошла ошибка. 10$ChEИko ВuTаLIу AHdРeЕVиCХ R0мE+40241*10/2 Вк.C0m/l o s h v i t a l i k 1695517289</h2>
 
